Created the structure for the home page

--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
     <header>
         <h2>Marius Bodochi</h2>
     </header>
-    <section></section>
-    <section></section>
+    <section>
+        Portrait Image
+    </section>
+    <section>
+        Background image
+    </section>
+    <section>
+        about
+    </section>
+
+    <footer>
+        Contact, and social media accounts
+    </footer>
     <!-- font awesome -->
     <script src=""></script>
 </body>
