Added styling for the logo/name and navigation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Marius Bodochi</h1>
+            <h1 id="name">Marius Bodochi</h1>
         </a>
         <nav>
             <ol>
