Styled the navigation links

--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="name">Marius Bodochi</h1>
-        </a>
+        <a href="index.html"></a>
         <nav>
-            <ol>
+            <ol id="navi">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
                     <a href="#">About</a>
@@ -34,6 +32,9 @@
                 </li>
             </ol>
         </nav>
+        <div id="name">
+            <h1>Marius Bodochi</h1>
+        </div> 
     </header>
     <section>
         Portrait Image
