Added home background image + portrait image + quote and styled the positioning

--- a/index.html
+++ b/index.html
@@ -33,24 +33,32 @@
             </ol>
         </nav>
         <div id="name">
-            <h1>Marius Bodochi</h1>
-        </div> 
+            <h1>Marius Bodochi <i class="fa-solid fa-masks-theater"></i></i></h1>
+        </div>
     </header>
     <section>
-        Portrait Image
+        <div id="portrait"></div>
     </section>
     <section>
-        Background image
+        <div id="home-image">
+            <span id="quote">
+                <p style="font-style:italic;">
+                "I would say about Marius Bodochi that he is an artist, a creator of the image from all its angles, psychologically, up to physical identification, through the power of expression, through the subtle nuances that only a great artist perceives in a character of Salieri's stature."
+                </p>
+                <br>
+                <p>Mihaela Dordea 2010</p>
+            </span>
+        </div>
     </section>
     <section>
-        about
+        About
     </section>
 
     <footer>
         Contact, and social media accounts
     </footer>
     <!-- font awesome -->
-    <script src=""></script>
+    <script src="https://kit.fontawesome.com/05fc023ef5.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
