--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <header>
         <a href="index.html"></a>
-        <nav>
+        <nav> <i class="fa-solid fa-masks-theater" id="mask">
+                    <a href="index.html" class="active"></a>
+              </i>
             <ol id="navi">
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -32,23 +34,27 @@
                 </li>
             </ol>
         </nav>
-        <div id="name">
-            <h1>Marius Bodochi <i class="fa-solid fa-masks-theater"></i></i></h1>
-        </div>
     </header>
-    <section>
-        <div id="portrait"></div>
+    <section id="home-outer">
+            <div id="home-image">
+                <span id="name">
+                    <h1>Marius Bodochi</h1>
+                    <p>Romanian Actor and Director at TNB Bucharest</p>
+                </span>
+            </div>
     </section>
     <section>
-        <div id="home-image">
-            <span id="quote">
-                <p style="font-style:italic;">
-                "I would say about Marius Bodochi that he is an artist, a creator of the image from all its angles, psychologically, up to physical identification, through the power of expression, through the subtle nuances that only a great artist perceives in a character of Salieri's stature."
-                </p>
-                <br>
-                <p>Mihaela Dordea 2010</p>
-            </span>
+    <div class="intro">
+        <div id="portrait"></div>
+        <div id="quote">
+            <h3 style="font-style:italic;">
+                "I would say about Marius Bodochi that he is an artist, a creator of the image from all its angles,
+                psychologically, up to physical identification, through the power of expression, through the subtle
+                nuances that only a great artist perceives in a character of Salieri's stature."
+            </h3>
+            <h3>Mihaela Dordea 2010</h3>
         </div>
+    </div>
     </section>
     <section>
         About
