Fixed the flexibility of the About section; added the bottom of the About and the social media links

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <header>
         <a href="index.html"></a>
         <nav> <i class="fa-solid fa-masks-theater" id="mask">
-                    <a href="index.html" class="active"></a>
-              </i>
+                <a href="index.html" class="active"></a>
+            </i>
             <ol id="navi">
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
                     <a href="#">Media</a>
@@ -36,32 +36,110 @@
         </nav>
     </header>
     <section id="home-outer">
-            <div id="home-image">
-                <span id="name">
-                    <h1>Marius Bodochi</h1>
-                    <p>Romanian Actor and Director at TNB Bucharest</p>
-                </span>
-            </div>
-    </section>
-    <section>
-    <div class="intro">
-        <div id="portrait"></div>
-        <div id="quote">
-            <h3 style="font-style:italic;">
-                "I would say about Marius Bodochi that he is an artist, a creator of the image from all its angles,
-                psychologically, up to physical identification, through the power of expression, through the subtle
-                nuances that only a great artist perceives in a character of Salieri's stature."
-            </h3>
-            <h3>Mihaela Dordea 2010</h3>
+        <div id="home-image">
+            <span id="name">
+                <h1>Marius Bodochi</h1>
+                <p>Artistic Director & Actor @ TNB Bucharest Romania</p>
+            </span>
         </div>
-    </div>
     </section>
+    <br>
+    <section id="about">
+        <h1 style="text-align:center;">About <i class="fa-solid fa-masks-theater" style="color: rgb(209, 36, 6);"></i>
+        </h1>
+        <div class="intro">
+            <div id="quote1">
+                <ul>
+                    <h3>Biography</h3>
+                    <br>
+                    <li>
+                        Marius Bodochi is a famous Romanian film and theatre actor born on September 6, 1959 in Cluj
+                        Napoca, Romania.
+                    </li>
+                    <br>
+                    <li>
+                        Marius Bodochi graduated from the Theater Institute in Târgu Mureș , Professor Constantin
+                        Codrescu 's class,
+                        class of 1982.
+                    </li>
+                    <br>
+                    <li>
+                        Between 1991 and 2000 he was a year teacher, university lecturer at "Babeș Bolyai"
+                        University Cluj, Faculty of Letters, Department of Theatre.
+                    </li>
+                    <br>
+                    <li>
+                        He made his debut in 1982, the last year of his studies, on the stage of the National Theater in
+                        Cluj Napoca, with the role of Christopher Flanders in "The Train Doesn't Stop Here" by Tennessee
+                        Williams.
+                    </li>
+                    <br>
+                    <li>
+                        He has been playing on the stage of the "ILCaragiale" National Theater in Bucharest since
+                        2004. He made memorable creations in the roles of Constantin in "Săptamâna luminată" - directed
+                        by
+                        Mihai Măniuțiu at the Cluj National Theater, Dionyssos in "Bacantele" - directed by Mihai
+                        Măniuțiu
+                        at the National Theater in Bucharest (1997) , Bolinbroke from "Richard II" - directed by Mihai
+                        Măniuțiu at the National Theater Bucharest, Oberon from "A Midsummer Night's Dream" - directed
+                        by
+                        Victor Ioan Frunză at the National Theater Cluj, the King from "The King Dies" - directed by
+                        Victor
+                        Ioan Frunză at Theatrum Mundi 2002), Antonio Salieri from "at the Bucharest National Opera
+                        (2010).
+                    </li>
+                </ul>
+            </div>
+            <div id="portrait-container">
+                <div id="portrait"></div>
+            </div>
+            <div id="quote2">
+                <h3>Mihaela Dordea 2010</h3>
+                <br>
+                <p>
+                    "Marius Bodochi is one of the few, rare actors who have the strength to express such a character
+                    with such elegance (Antonio Salieri from "Amadeus" by Peter Shaffer, directed by Marcel Top). I
+                    would say about Marius Bodochi that he is an artist, a creator of the image from all its angles,
+                    psychologically, up to physical identification, through the power of expression, through the subtle
+                    nuances that only a great artist perceives in a character of Salieri's stature."
+                </p>
+            </div>
+        </div>
+    </section>
+    <br>
     <section>
-        About
+        <div id="tnb">
+            <h2>
+                <i class="fa-solid fa-building-columns" style="color: rgb(209, 36, 6);"></i>
+                <br>
+                Bucharest National Theatre
+            </h2>
+        </div>
     </section>
 
     <footer>
-        Contact, and social media accounts
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our facebook page (opens in a new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/05fc023ef5.js" crossorigin="anonymous"></script>
