Added the code for the Media page and activated it

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Media</a>
+                    <a href="media.html">Media</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
