Added pictures to the Media page and created the styling

--- a/media.html
+++ b/media.html
@@ -35,6 +35,31 @@
             </ol>
         </nav>
     </header>
+    <section id="pictures">
+        <img src="assets/images/media/Amadeus.jpg" alt="two contes and one lady">
+        <img src="assets/images/media/Amadeus1.JPG" alt="two contes and two ladies">
+        <img src="assets/images/media/Becket.jpg" alt="King Becket">
+        <img src="assets/images/media/caragiale1.jpg" alt="IL Caragiale play">
+        <img src="assets/images/media/comedy.jpg" alt="Comedy scene one man and woman">
+        <img src="assets/images/media/comedy1.jpg" alt="Comedy scene two three men debating">
+        <img src="assets/images/media/comedy2.jpg" alt="Comedy scene three two men, one trombone and a pistol">
+        <img src="assets/images/media/Confidențial.jpg" alt="Comedy scene man funny walking and elder woman watching">
+        <img src="assets/images/media/Confidențial1.jpg" alt="Play scene man with a persuasive look holding a lady">
+        <img src="assets/images/media/commercial.jpg" alt="Cognac commercial man portrait embraced by woman">
+        <img src="assets/images/media/dpfdpd.jpg" alt="Play scene two men sitting on chairs with four women behind them">
+        <img src="assets/images/media/dpfdpd1.jpg" alt="Play scene two men holding each others shoulders while acclimating towards the public">
+        <img src="assets/images/media/drama1.jpg" alt=" BW picture a dramatic expression while staring at the void">
+        <img src="assets/images/media/hamlet.jpg" alt="A scene from Hamlet">
+        <img src="assets/images/media/movie1.jpg" alt="A scene from the Goat with three kids movie">
+        <img src="assets/images/media/rumors.jpg" alt="Play scene from the play called Rumors">
+        <img src="assets/images/media/samurai.jpg" alt="Play scene two samurai men">
+        <img src="assets/images/media/Savonarola.jpg" alt="Movie scene Savonarola the priest praying with a dramatic look towards the sky">
+        <img src="assets/images/media/spranceana.jpg" alt="A gipsy character portrait">
+        <img src="assets/images/media/terorism.jpg" alt="A stupefied look from the play called Terrorism">
+        <img src="assets/images/media/ursul.jpg" alt="Man on his knees with a dramatic look while lady points a magnum revolver at him">
+
+    </section>
+
     <footer>
         <ul class="social-networks">
             <li>
