Added the hyperlinkon the Home Page => bottom => the theatre icon => tto the actor profile on the Buchares National Theatre website

--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@
     <br>
     <section>
         <div id="tnb">
-            <h2>
-                <i class="fa-solid fa-building-columns" style="color: rgb(209, 36, 6);"></i>
+            <h2>    
+                <a href="https://www.tnb.ro/ro/marius-bodochi" target="_blank" rel="noopener"
+                aria-label="Visit Marius Bodochi's profile on the National Bucharest Theatre page (opens in a new tab)">
+                    <i class="fa-solid fa-building-columns" style="color: rgb(209, 36, 6);"></i>
+                </a>
                 <br>
                 Bucharest National Theatre
             </h2>
