Contact Form - created and activated the COntact Form page + added the background image and worked a bit on the styling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
     <header>
-        <a href="index.html"></a>
-        <nav> <i class="fa-solid fa-masks-theater" id="mask">
-                <a href="index.html" class="active"></a>
-            </i>
+         <a href="index.html">
+            <i class="fa-solid fa-masks-theater" id="mask"></i>
+         </a>
+         <nav>
             <ol id="navi">
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -30,7 +30,7 @@
                     <a href="media.html">Media</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ol>
         </nav>
@@ -45,7 +45,10 @@
     </section>
     <br>
     <section id="about">
-        <h1 style="text-align:center;">About <i class="fa-solid fa-masks-theater" style="color: rgb(209, 36, 6);"></i>
+        <h1 style="text-align:center;">About
+            <a href="index.html">
+                <i class="fa-solid fa-masks-theater" style="color: rgb(209, 36, 6);"></i>
+                </a>
         </h1>
         <div class="intro">
             <div id="quote1">
