--- a/media.html
+++ b/media.html
@@ -15,22 +15,22 @@
 
 <body>
     <header>
-        <a href="index.html"></a>
-        <nav> <i class="fa-solid fa-masks-theater" id="mask">
-                <a href="index.html" class="active"></a>
-            </i>
+        <a href="index.html">
+            <i class="fa-solid fa-masks-theater" id="mask"></i>
+         </a>
+        <nav>
             <ol id="navi">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#about">About</a>
-                </li>
+                </li> -->
                 <li>
                     <a href="media.html" class="active">Media</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ol>
         </nav>
