Rename photos, add comments for the .html sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Marius Bodochi</title>
 </head>
 
-<body>
+<body id="top">
+
+    <!-- header & nav -->
     <header>
          <a href="index.html">
             <i class="fa-solid fa-masks-theater" id="mask"></i>
@@ -35,6 +37,8 @@
             </ol>
         </nav>
     </header>
+
+    <!-- home section  -->
     <section id="home-outer">
         <div id="home-image">
             <span id="name">
@@ -44,12 +48,16 @@
         </div>
     </section>
     <br>
+
+    <!-- about section  -->
     <section id="about">
         <h1 style="text-align:center;">About
-            <a href="index.html">
+            <a href="#top">
                 <i class="fa-solid fa-masks-theater" style="color: rgb(209, 36, 6);"></i>
                 </a>
         </h1>
+
+        <!-- text part 1  -->
         <div class="intro">
             <div id="quote1">
                 <ul>
@@ -93,9 +101,13 @@
                     </li>
                 </ul>
             </div>
+
+            <!-- portrait picture  -->
             <div id="portrait-container">
                 <div id="portrait"></div>
             </div>
+
+            <!-- text part 2  -->
             <div id="quote2">
                 <h3>Mihaela Dordea 2010</h3>
                 <br>
@@ -110,6 +122,8 @@
         </div>
     </section>
     <br>
+
+    <!-- bottom part, link to TNB profile  -->
     <section>
         <div id="tnb">
             <h2>    
@@ -123,6 +137,7 @@
         </div>
     </section>
 
+    <!-- footer, social media links -->
     <footer>
         <ul class="social-networks">
             <li>
@@ -147,6 +162,7 @@
             </li>
         </ul>
     </footer>
+    
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/05fc023ef5.js" crossorigin="anonymous"></script>
 </body>
