--- a/media.html
+++ b/media.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- header & nav -->
     <header>
         <a href="index.html">
             <i class="fa-solid fa-masks-theater" id="mask"></i>
@@ -23,9 +25,9 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <!-- <li>
-                    <a href="#about">About</a>
-                </li> -->
+                <li>
+                    <a href="index.html#about">About</a>
+                </li>
                 <li>
                     <a href="media.html" class="active">Media</a>
                 </li>
@@ -35,16 +37,18 @@
             </ol>
         </nav>
     </header>
+
+    <!-- photo section  -->
     <section id="pictures">
-        <img src="assets/images/media/Amadeus.jpg" alt="two contes and one lady">
-        <img src="assets/images/media/Amadeus1.JPG" alt="two contes and two ladies">
-        <img src="assets/images/media/Becket.jpg" alt="King Becket">
+        <img src="assets/images/media/amadeus.jpg" alt="two contes and one lady">
+        <img src="assets/images/media/amadeus1.jpg" alt="two contes and two ladies">
+        <img src="assets/images/media/becket.jpg" alt="King Becket">
         <img src="assets/images/media/caragiale1.jpg" alt="IL Caragiale play">
         <img src="assets/images/media/comedy.jpg" alt="Comedy scene one man and woman">
         <img src="assets/images/media/comedy1.jpg" alt="Comedy scene two three men debating">
         <img src="assets/images/media/comedy2.jpg" alt="Comedy scene three two men, one trombone and a pistol">
-        <img src="assets/images/media/Confidențial.jpg" alt="Comedy scene man funny walking and elder woman watching">
-        <img src="assets/images/media/Confidențial1.jpg" alt="Play scene man with a persuasive look holding a lady">
+        <img src="assets/images/media/confidențial.jpg" alt="Comedy scene man funny walking and elder woman watching">
+        <img src="assets/images/media/confidențial1.jpg" alt="Play scene man with a persuasive look holding a lady">
         <img src="assets/images/media/commercial.jpg" alt="Cognac commercial man portrait embraced by woman">
         <img src="assets/images/media/dpfdpd.jpg" alt="Play scene two men sitting on chairs with four women behind them">
         <img src="assets/images/media/dpfdpd1.jpg" alt="Play scene two men holding each others shoulders while acclimating towards the public">
@@ -53,13 +57,13 @@
         <img src="assets/images/media/movie1.jpg" alt="A scene from the Goat with three kids movie">
         <img src="assets/images/media/rumors.jpg" alt="Play scene from the play called Rumors">
         <img src="assets/images/media/samurai.jpg" alt="Play scene two samurai men">
-        <img src="assets/images/media/Savonarola.jpg" alt="Movie scene Savonarola the priest praying with a dramatic look towards the sky">
+        <img src="assets/images/media/savonarola.jpg" alt="Movie scene Savonarola the priest praying with a dramatic look towards the sky">
         <img src="assets/images/media/spranceana.jpg" alt="A gipsy character portrait">
         <img src="assets/images/media/terorism.jpg" alt="A stupefied look from the play called Terrorism">
         <img src="assets/images/media/ursul.jpg" alt="Man on his knees with a dramatic look while lady points a magnum revolver at him">
-
     </section>
 
+    <!-- footer, social media links -->
     <footer>
         <ul class="social-networks">
             <li>
@@ -84,6 +88,7 @@
             </li>
         </ul>
     </footer>
+    
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/05fc023ef5.js" crossorigin="anonymous"></script>
 </body>
