--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,9 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <!-- <li>
-                    <a href="#about">About</a>
-                </li> -->
+                <li>
+                    <a href="index.html#about">About</a>
+                </li>
                 <li>
                     <a href="media.html">Media</a>
                 </li>
