--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="about">
         <h1 style="text-align:center;">About
             <a href="#top">
-                <i class="fa-solid fa-masks-theater" style="color: rgb(209, 36, 6);"></i>
+                <i class="fa-solid fa-masks-theater" id="mask2"></i>
                 </a>
         </h1>
 
@@ -64,18 +64,17 @@
                     <h3>Biography</h3>
                     <br>
                     <li>
-                        Marius Bodochi is a famous Romanian film and theatre actor born on September 6, 1959 in Cluj
+                        Marius Bodochi is a Romanian film and theatre actor born on September 6, 1959 in Cluj
                         Napoca, Romania.
                     </li>
                     <br>
                     <li>
-                        Marius Bodochi graduated from the Theater Institute in Târgu Mureș , Professor Constantin
-                        Codrescu 's class,
-                        class of 1982.
+                        He graduated from the Theater Institute in Târgu Mureș, Professor Constantin
+                        Codrescu's class, class of 1982.
                     </li>
                     <br>
                     <li>
-                        Between 1991 and 2000 he was a year teacher, university lecturer at "Babeș Bolyai"
+                        Between 1991 and 2000 he was a teacher, university lecturer at "Babeș Bolyai"
                         University Cluj, Faculty of Letters, Department of Theatre.
                     </li>
                     <br>
@@ -91,7 +90,7 @@
                         by
                         Mihai Măniuțiu at the Cluj National Theater, Dionyssos in "Bacantele" - directed by Mihai
                         Măniuțiu
-                        at the National Theater in Bucharest (1997) , Bolinbroke from "Richard II" - directed by Mihai
+                        at the National Theater in Bucharest (1997), Bolinbroke from "Richard II" - directed by Mihai
                         Măniuțiu at the National Theater Bucharest, Oberon from "A Midsummer Night's Dream" - directed
                         by
                         Victor Ioan Frunză at the National Theater Cluj, the King from "The King Dies" - directed by
@@ -123,16 +122,16 @@
     </section>
     <br>
 
-    <!-- bottom part, link to TNB profile  -->
+    <!-- bottom part link to TNB profile  -->
     <section>
         <div id="tnb">
             <h2>    
                 <a href="https://www.tnb.ro/ro/marius-bodochi" target="_blank" rel="noopener"
                 aria-label="Visit Marius Bodochi's profile on the National Bucharest Theatre page (opens in a new tab)">
-                    <i class="fa-solid fa-building-columns" style="color: rgb(209, 36, 6);"></i>
+                    <i class="fa-solid fa-building-columns" id="tnb-icon"></i>
                 </a>
                 <br>
-                Bucharest National Theatre
+                Bucharest National Theater
             </h2>
         </div>
     </section>
