Style form, bckgrnd color, part fix rspnsv dsgn

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <!-- form section  -->
     <section>
         <div id="form">
-            <form action="https://formdump.codeinstitute.net/" method="post">
+            <form action="https://formdump.codeinstitute.net/" method="post" class="contact-form">
                 <h2 id="title">Get in touch!</h2>
                 <br>
                 <label for="name">Your Name</label>
