Style proportions for contact page and debug

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
                 <input type="email" name="email_address" id="email" class="text-input" required>
                 <br>
                 <label for="message">Message</label>
-                <textarea name="" id="message" class="text-input"></textarea>
+                <textarea name="text_message" id="message" class="text-input"></textarea>
                 <br>
                 <input type="submit" value="Send Message" class="action" id="send">
                 <input type="reset" value="Reset" class="action" id="reset">
