--- a/index.html
+++ b/index.html
@@ -140,22 +140,22 @@
     <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
+                <a href="https://www.facebook.com/marius.bodochi.7" target="_blank" rel="noopener"
                     aria-label="Visit our facebook page (opens in a new tab)"><i
                         class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
+                <a href="https://twitter.com/search?q=marius%20bodochi&src=typed_query&f=image" target="_blank" rel="noopener"
                     aria-label="Visit our twitter page (opens in a new tab)"><i
                         class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
+                <a href="https://www.youtube.com/results?search_query=marius+bodochi" target="_blank" rel="noopener"
                     aria-label="Visit our youtube page (opens in a new tab)"><i
                         class="fa-brands fa-square-youtube"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener"
+                <a href="https://www.instagram.com/explore/tags/mariusbodochi/" target="_blank" rel="noopener"
                     aria-label="Visit our instagram page (opens in a new tab)"><i
                         class="fa-brands fa-square-instagram"></i></a>
             </li>
