Fix small screen scaling for the contact page

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
     <!-- header & nav -->
     <header>
-         <a href="index.html">
+        <a href="index.html">
             <i class="fa-solid fa-masks-theater" id="mask"></i>
-         </a>
-         <nav>
+        </a>
+        <nav>
             <ol id="navi">
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -54,7 +54,7 @@
         <h1 style="text-align:center;">About
             <a href="#top">
                 <i class="fa-solid fa-masks-theater" id="mask2"></i>
-                </a>
+            </a>
         </h1>
 
         <!-- text part 1  -->
@@ -64,39 +64,44 @@
                     <h3>Biography</h3>
                     <br>
                     <li>
-                        Marius Bodochi is a Romanian film and theatre actor born on September 6, 1959 in Cluj
-                        Napoca, Romania.
+                        Marius Bodochi (born September 6, 1959 in Cluj-Napoca, Romania) is a renowned Romanian film- and
+                        theater actor and Creative Director of the National Theater in Bucharest.
                     </li>
                     <br>
                     <li>
-                        He graduated from the Theater Institute in Târgu Mureș, Professor Constantin
-                        Codrescu's class, class of 1982.
+                        After his graduation from the Institute of Theater in Târgu Mureș in 1982, Marius debuted on the
+                        stage of the National Theater in Cluj-Napoca, in the role of Christopher Flanders in "The Train
+                        Doesn't Stop Here" by Tennessee Williams.
                     </li>
                     <br>
                     <li>
-                        Between 1991 and 2000 he was a teacher, university lecturer at "Babeș Bolyai"
-                        University Cluj, Faculty of Letters, Department of Theatre.
+                        Between 1991 and 2000 Bodochi was a teacher and lecturer within the Theater Faculty of the Babeș
+                        Bolyai University in Cluj-Napoca. Marius continuous to play for the I.L. Caragiale National
+                        Theater in Bucharest since 2004.
                     </li>
                     <br>
                     <li>
-                        He made his debut in 1982, the last year of his studies, on the stage of the National Theater in
-                        Cluj Napoca, with the role of Christopher Flanders in "The Train Doesn't Stop Here" by Tennessee
-                        Williams.
+                        Since 1982, he made various memorable creations, such as:
                     </li>
                     <br>
                     <li>
-                        He has been playing on the stage of the "ILCaragiale" National Theater in Bucharest since
-                        2004. He made memorable creations in the roles of Constantin in "Săptamâna luminată" - directed
-                        by
-                        Mihai Măniuțiu at the Cluj National Theater, Dionyssos in "Bacantele" - directed by Mihai
-                        Măniuțiu
-                        at the National Theater in Bucharest (1997), Bolinbroke from "Richard II" - directed by Mihai
-                        Măniuțiu at the National Theater Bucharest, Oberon from "A Midsummer Night's Dream" - directed
-                        by
-                        Victor Ioan Frunză at the National Theater Cluj, the King from "The King Dies" - directed by
-                        Victor
-                        Ioan Frunză at Theatrum Mundi 2002), Antonio Salieri from "at the Bucharest National Opera
-                        (2010).
+                        Constantin in "Săptamâna luminată" - directed by Mihai Măniuțiu at the Cluj National Theater
+                    </li>
+                    <li>
+                        Dionyssos in "Bacantele" - directed by Mihai Măniuțiu at the National Theater in Bucharest
+                    </li>
+                    <li>
+                        Bolinbroke from "Richard II" - directed by Mihai Măniuțiu at the National Theater Bucharest
+                    </li>
+                    <li>
+                        Oberon from "A Midsummer Night's Dream" - directed by Victor Ioan Frunză at the National Theater
+                        Cluj
+                    </li>
+                    <li>
+                        The King from "The King Dies" - directed by Victor Ioan Frunză at Theatrum Mundi
+                    </li>
+                    <li>
+                        Antonio Salieri from "at the Bucharest National Opera
                     </li>
                 </ul>
             </div>
@@ -125,9 +130,9 @@
     <!-- bottom part link to TNB profile  -->
     <section>
         <div id="tnb">
-            <h2>    
+            <h2>
                 <a href="https://www.tnb.ro/ro/marius-bodochi" target="_blank" rel="noopener"
-                aria-label="Visit Marius Bodochi's profile on the National Bucharest Theatre page (opens in a new tab)">
+                    aria-label="Visit Marius Bodochi's profile on the National Bucharest Theatre page (opens in a new tab)">
                     <i class="fa-solid fa-building-columns" id="tnb-icon"></i>
                 </a>
                 <br>
@@ -145,8 +150,8 @@
                         class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
-                <a href="https://twitter.com/search?q=marius%20bodochi&src=typed_query&f=image" target="_blank" rel="noopener"
-                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                <a href="https://twitter.com/search?q=marius%20bodochi&src=typed_query&f=image" target="_blank"
+                    rel="noopener" aria-label="Visit our twitter page (opens in a new tab)"><i
                         class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
@@ -161,7 +166,7 @@
             </li>
         </ul>
     </footer>
-    
+
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/05fc023ef5.js" crossorigin="anonymous"></script>
 </body>
