Fix validator errors, complete readme, fix style

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Marius Bodochi an actor that dedicated his life to the art of drama at the National Bucharest Theatre">
-    <meta name="description" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
+    <meta name="tags" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Marius Bodochi</title>
@@ -44,7 +44,7 @@
             <form action="https://formdump.codeinstitute.net/" method="post" class="contact-form">
                 <h2 id="title">Get in touch!</h2>
                 <br>
-                <label for="name">Your Name</label>
+                <label for="full-name">Your Name</label>
                 <input type="text" name="your_name" id="full-name" class="text-input" required>
                 <br>
                 <label for="email">Email Address</label>
