--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Marius Bodochi an actor that dedicated his life to the art of drama at the National Bucharest Theatre">
-    <meta name="description" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
+    <meta name="description" content="Marius Bodochi an actor that dedicated his life to the art of drama at the National Bucharest Theatre">
+    <meta name="tags" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Marius Bodochi</title>
@@ -41,10 +40,10 @@
     <!-- home section  -->
     <section id="home-outer">
         <div id="home-image">
-            <span id="name">
+            <div id="name">
                 <h1>Marius Bodochi</h1>
                 <p>Artistic Director & Actor @ TNB Bucharest Romania</p>
-            </span>
+            </div>
         </div>
     </section>
     <br>
@@ -60,30 +59,26 @@
         <!-- text part 1  -->
         <div class="intro">
             <div id="quote1">
+                <h3>Biography</h3>
+                <br>
                 <ul>
-                    <h3>Biography</h3>
-                    <br>
                     <li>
                         Marius Bodochi (born September 6, 1959 in Cluj-Napoca, Romania) is a renowned Romanian film- and
                         theater actor and Creative Director of the National Theater in Bucharest.
                     </li>
-                    <br>
                     <li>
                         After his graduation from the Institute of Theater in Târgu Mureș in 1982, Marius debuted on the
                         stage of the National Theater in Cluj-Napoca, in the role of Christopher Flanders in "The Train
                         Doesn't Stop Here" by Tennessee Williams.
                     </li>
-                    <br>
                     <li>
                         Between 1991 and 2000 Bodochi was a teacher and lecturer within the Theater Faculty of the Babeș
                         Bolyai University in Cluj-Napoca. Marius continuous to play for the I.L. Caragiale National
                         Theater in Bucharest since 2004.
                     </li>
-                    <br>
                     <li>
                         Since 1982, he made various memorable creations, such as:
                     </li>
-                    <br>
                     <li>
                         Constantin in "Săptamâna luminată" - directed by Mihai Măniuțiu at the Cluj National Theater
                     </li>
