--- a/media.html
+++ b/media.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Marius Bodochi an actor that dedicated his life to the art of drama at the National Bucharest Theatre">
-    <meta name="description" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
+    <meta name="tags" content="marius bodochi, drama, comedy, stage, acting, national theatre, bucharest">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Marius Bodochi</title>
@@ -39,7 +39,8 @@
     </header>
 
     <!-- photo section  -->
-    <section id="pictures">
+    <section>
+     <h3 id="pictures">
         <img src="assets/images/media/amadeus.jpg" alt="two contes and one lady">
         <img src="assets/images/media/amadeus1.jpg" alt="two contes and two ladies">
         <img src="assets/images/media/becket.jpg" alt="King Becket">
@@ -61,6 +62,7 @@
         <img src="assets/images/media/spranceana.jpg" alt="A gipsy character portrait">
         <img src="assets/images/media/terorism.jpg" alt="A stupefied look from the play called Terrorism">
         <img src="assets/images/media/ursul.jpg" alt="Man on his knees with a dramatic look while lady points a magnum revolver at him">
+     </h3>
     </section>
 
     <!-- footer, social media links -->
